Version 7.5.0
You can now press t during a game to know how long the game's been lasting.
There is now a menu option to disable reading music from disk, which will eliminate the silence experienced at the end of music files.
Added a settings option to decide whether the tts interrupts when pressing keys. Any key, that is.
You can now use escape to interrupt speech if using tts regardless of interrupt setting.
new mission: Tap tap at quick tap
Total beatcoins are now announced when you win or lose coins.
I made a cool infrastructure for future minigames to use mission credits. Maybe I can set up some sort of mission credit rewards as well, but expect mission credits to be acquired mostly by completing the dynamic missions.
Wealthy chance minigame is back, and it now costs mission credits to play because the prizes are high. Hint: The bank may offer a surprise!
Fixed a long standing and very very annoying problem, browse mode is now automatically disabled!
Missions system enabled, with a couple of missions that you'll discover as you play. There are currently 7 missions which give you mission credits as your mission level increases. Mission credits do nothing right now.
The stats system is taking shape. You can now see your stats, which are things like total played time, etc.
There is now a settings menu at the bottom, to clean up the huge main menu of seamingly endless options which includes things like pack directory, language, the new keyboard layout option, etc.
Fixed a problem where tutorial sounds would not play.
In the learn pack menu you can now press shift to hear the countersound.
You can now use an alternative keyboard layout which uses e, d, r, f, and optionally i, k, j, l as alternative keys for beatstar. This has been a long time coming and I am ashamed not to have made it sooner. I made it this way instead of a remapping option so that players don't use in game keys as action keys, etc. Hopefully, it's enough.