@@ -73,7 +73,7 @@ missionlevels:"Now at level %1, with %2 out of %3 for next credit.",
 mSettings:"Settings and help",
 settingsMenu:"This is the settings menu. Feel free to change anything. You can cancel by choosing back.",
 "mk1":"Space, tab, enter, backspace and arrows",
-"mk2": "e, d, r, f, and I, K, J, and L as arrows.",
+"mk2": "e, d, r, f, and I, K, J, and L as arrows",
 "MKeyLayout": "Keyboard Layout (left and right arrows to change)",
 			k2:"Space bar",
 			k3: "tab",
@@ -382,7 +382,7 @@ selectVoice:"%1 voices available, use the up and down arrows to select a voice, 
 	    mListen: 'Ready: %1 levels unlocked. you can go back to the main menu with the left arrow key.',
 	    mStart: 'Start Game',
 	    mLearn: 'Learn the pack',
-	    mActions: 'This pack has %1 actions. Use the action keys configured by your layout. By default, they are: space, tab, enter, backspace, and optionally arrows up, down, left, right. Press shift along with one of the action keys to hear the action completed sound. To hear the stop action, press the period key (to the right of comma). To exit press Q',
+	    mActions: 'This pack has %1 actions. Use %2. Press shift along with one of the action keys to hear the action completed sound. To hear the stop action, press the period key (to the right of comma). To exit press Q',
 	    yes: 'Yes',
 	    noGameCash: 'The minimum bet is %1 beatcoins, you don\'t have enough right now. Go play!',
 	    doublecash: 'Double or nothing requires at least 5000 beatcoins. Sorry!',
@@ -485,8 +485,8 @@ selectVoice:"%1 voices available, use the up and down arrows to select a voice, 
 			sTotalTaps: "teclas pulsadas en el reacciona: %1",
 mSettings:"Configuración y ayuda",
 settingsMenu:"Este es el menú de configuración. Puedes cambiar opciones aquí, o pulsar volver para salir.",
-"mk1":"Espacio, tabulador, enter y retroceso, y las flechas.",
-"mk2": "e, d, r, f; e I, K, J, y L como flechas.",
+"mk1":"Espacio, tabulador, enter y retroceso, y las flechas",
+"mk2": "e, d, r, f; e I, K, J, y L como flechas",
 "MKeyLayout": "Modo de teclado (flechas izquierda y derecha para cambiar)",
 
 			k2:"espacio",
@@ -735,7 +735,7 @@ selectVoice:"%1 voces disponibles. Usa las flechas arriba y abajo para seleccion
 					    mDownloadInstructions: 'Pulsa las flechas para moverte por los packs, barra espaciadora para seleccionar un pack, la p para previsualizarlo, y enter para empezar la descarga de los seleccionados. pulsa escape o la flecha izquierda para cancelar',
 					    mStart: 'jugar',
 					    mLearn: 'aprender el pack',
-					    mActions: 'Este pack tiene %1 acciones. Usa las teclas que hayas configurado en ti diseño de teclado, por defecto: espacio, tabulador, enter, retroceso/borrar, y opcionalmente las flechas. Usa shift junto con una de estas teclas para escuchar el sonido de acción completada. Para escuchar la acción de quedarse quieto, pulsa la tecla del punto. Para salir pulsa la q.',
+					    mActions: 'Este pack tiene %1 acciones. Usa %2. Usa shift junto con una de estas teclas para escuchar el sonido de acción completada. Para escuchar la acción de quedarse quieto, pulsa la tecla del punto. Para salir pulsa la q.',
 					    dling: 'Descargando %2 packs por favor espera...',
 					    dlingdone: '¡Hecho! Reconstruyendo base de datos...',
 					    packError: 'No hemos encontrado packs en tu pc, vamos a bajar el pack por defecto, espera por favor...',
