@@ -83,9 +83,6 @@ else {
 	const para = document.createElement('p');
 	para.appendChild(document.createTextNode(text));
 	document.getElementById('speech').appendChild(para);
-setTimeout(()=> {
-	document.getElementById('speech').removeChild(para);
-},30);
 }
 } // End speak()
 
