@@ -1,4 +1,5 @@
 Version 7.5.0
+Beatstar memory is back!
 You can now press t during a game to know how long the game's been lasting.
 There is now a menu option to disable reading music from disk, which will eliminate the silence experienced at the end of music files.
 Added a settings option to decide whether the tts interrupts when pressing keys. Any key, that is.
